# apm

./: .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  apm.lock.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: linting.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  notice-drift.yml  pr-review-panel.lock.yml  triage-panel.lock.yml
docs/: astro.config.mjs  package-lock.json
scripts/: generate-notice.py  notice-metadata.yaml  test-integration.sh  validate-1061-real-world.py
src/apm_cli/: cli.py  config.py  constants.py  drift.py  factory.py  update_policy.py  version.py
tests/: basic_workflow_test.py  conftest.py  manual_workflow_script.py  noninteractive_workflow_test.py  test_apm_package_models.py  test_apm_resolver.py  test_codex_docker_args_fix.py  test_codex_empty_string_and_defaults.py  test_collision_integration.py  test_console.py  test_distributed_compilation.py  test_empty_string_and_defaults.py  test_enhanced_discovery.py  test_github_downloader.py  test_github_downloader_token_precedence.py  test_lockfile.py  test_runnable_prompts.py  test_runtime_manager_token_precedence.py  test_token_manager.py  test_virtual_package_multi_install.py
tests/acceptance/: test_logging_acceptance.py
tests/benchmarks/: run_baseline.py  test_audit_benchmarks.py  test_compilation_hot_paths.py  test_git_and_compiler_benchmarks.py  test_install_hot_paths.py  test_perf_benchmarks.py  test_scaling_guards.py  test_security_and_resolver_benchmarks.py
tests/fixtures/: synthetic_trees.py
tests/integration/: test_ado_bearer_e2e.py  test_ado_e2e.py  test_apm_dependencies.py  test_auth_resolver.py  test_auto_install_e2e.py  test_auto_integration.py  test_azure_skills_marketplace.py  test_collection_install.py  test_compile_constitution_injection.py  test_compile_copilot_root_instructions.py  test_compile_permission_denied.py  test_deployed_files_e2e.py  test_deps_update_e2e.py  test_diff_aware_install_e2e.py  test_gemini_integration.py  test_generic_git_url_install.py  (+37 more)
(+496 files in other folders)
